Moved IntegerList and CompressedIntegerList to utilities. Moved types::IndexValue to own file.

--- a/libraries/linear/CMakeLists.txt
+++ b/libraries/linear/CMakeLists.txt
@@ -39,6 +39,7 @@ source_group("tcc" FILES ${TCC})
 include_directories(include)
 include_directories(tcc)
 include_directories(../types/include)
+include_directories(../utilities/include)
 
 add_library(${PROJ_NAME} ${SRC} ${INCLUDE} ${TCC})
 
