--- a/libraries/utilities/CMakeLists.txt
+++ b/libraries/utilities/CMakeLists.txt
@@ -17,6 +17,7 @@ set (SRC src/BinaryClassificationEvaluator.cpp
          src/Files.cpp
          src/Format.cpp
          src/IntegerStack.cpp
+         src/OutputStream.cpp
          src/RandomEngines.cpp
          src/XMLSerialization.cpp)
 
@@ -26,6 +27,7 @@ set (INCLUDE include/BinaryClassificationEvaluator.h
              include/Format.h
              include/IIterator.h
              include/IntegerStack.h
+             include/OutputStream.h
              include/ParallelTransformIterator.h
              include/Parser.h
              include/RandomEngines.h
