replaced SharedLinearBinaryPredictor with simpler LinearPredictor

--- a/libraries/optimization/CMakeLists.txt
+++ b/libraries/optimization/CMakeLists.txt
@@ -25,6 +25,7 @@ source_group("tcc" FILES ${TCC})
 include_directories(include)
 include_directories(tcc)
 include_directories(../linear/include)
+include_directories(../dataset/include)
 include_directories(../layers/include)
 include_directories(../predictors/include)
 include_directories(../types/include)
