Edits to enable compiling in Linux

--- a/libraries/common/CMakeLists.txt
+++ b/libraries/common/CMakeLists.txt
@@ -35,6 +35,6 @@ include_directories(../types/include)
 include_directories(../utilities/include)
 
 add_library(${PROJ_NAME} ${SRC} ${INCLUDE})
-target_link_libraries(${PROJ_NAME} dataset layers utilities)
+target_link_libraries(${PROJ_NAME} dataset layers linear utilities)
 
 set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "libraries")
