--- a/compile/CMakeLists.txt
+++ b/compile/CMakeLists.txt
@@ -55,3 +55,5 @@ set (EXECUTABLE_OUTPUT_PATH ${GLOBAL_BIN_DIR})
 add_executable(${PROJ_NAME} ${SRC} ${INCLUDE} ${TCC})
 
 target_link_libraries(${PROJ_NAME} utilities layers linear common)
+
+set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "tools")
