--- a/libraries/utilities/CMakeLists.txt
+++ b/libraries/utilities/CMakeLists.txt
@@ -79,8 +79,13 @@ set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "libraries")
 
 set (TEST_NAME ${PROJ_NAME}_test)
 
+PROJECT(${TEST_NAME})
+
 set (TEST_SRC test/src/main.cpp test/src/XMLSerialization_test.cpp)
 set (TEST_INCLUDE test/include/XMLSerialization_test.h)
+
+source_group("src" FILES ${TEST_SRC})
+source_group("include" FILES ${TEST_INCLUDE})
 
 include_directories(../testing/include)
 include_directories(test/include)
