PR 18: Merge pull_requests/infinite_input_layer2 to master
This is a major refactoring of layers:

1. Map becomes something much more ad-hoc: like an iterator. It is the computable interface to the stack. You never modify a map or keep it for a long time.
2. There is no more explicit "input layer", it is hallucinated by the stack
3. the input layer is effectively infinite. It resizes itself to the size required by the coordinate list and/or the other layers

***
- renamed function arguments and names
 - added dataDimension command line arg
 - Added "auto" option for -dd
 - totally broken state ....
 - broken still
 - compiles
 - bug fix
 - removed Input* classes
 - progress on coordList
 - compiles
...

--- a/libraries/common/CMakeLists.txt
+++ b/libraries/common/CMakeLists.txt
@@ -15,14 +15,18 @@ endif()
 set (SRC src/DataLoadArguments.cpp
          src/DataSaveArguments.cpp
          src/DataLoaders.cpp
+         src/LoadStack.cpp
          src/MapLoadArguments.cpp
-         src/MapSaveArguments.cpp)
+         src/MapSaveArguments.cpp
+         src/StackLoadArguments.cpp)
 
 set (INCLUDE include/DataLoadArguments.h
              include/DataSaveArguments.h
              include/DataLoaders.h
+             include/LoadStack.h
              include/MapLoadArguments.h
-             include/MapSaveArguments.h)
+             include/MapSaveArguments.h
+             include/StackLoadArguments.h)
 
 source_group("src" FILES ${SRC})
 source_group("include" FILES ${INCLUDE})
