--- a/print/CMakeLists.txt
+++ b/print/CMakeLists.txt
@@ -13,9 +13,7 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
   add_compile_options(-std=c++1y)
 endif()
 
-set (SRC src/ConstructLayer.cpp
-         src/LayerLayout.cpp
-         src/PrintableInput.cpp
+set (SRC src/LayerLayout.cpp
          src/PrintableLayer.cpp
          src/PrintableStack.cpp
          src/PrintableCoordinatewise.cpp
@@ -26,7 +24,6 @@ set (SRC src/ConstructLayer.cpp
 
 set (INCLUDE include/LayerLayout.h
              include/PrintableLayer.h
-             include/PrintableInput.h
              include/PrintableStack.h
              include/PrintableCoordinatewise.h
              include/PrintableSum.h
