--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ add_subdirectory(libraries/lossFunctions)
 add_subdirectory(libraries/optimization)
 add_subdirectory(libraries/predictors)
 add_subdirectory(libraries/testing)
+add_subdirectory(libraries/trainers)
 add_subdirectory(libraries/treeLayout)
 add_subdirectory(libraries/utilities)
 add_subdirectory(apply)
