Added exe to mirror SortingTreeLearner

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ add_subdirectory(apply)
 add_subdirectory(compile)
 add_subdirectory(print)
 add_subdirectory(trainers/sgd)
+add_subdirectory(tools/trainers/sortingTreeLearner)
 add_subdirectory(scripts)
 
 # Add solution-level documentation
