PR 21: Merge pull_requests/swig_interfaces to master
Added SWIG and CMake files to build python and C# wrappers to the library.
There's a simple python test that parallels sgd.exe, in the interfaces/python directory.

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -17,6 +17,9 @@ add_test(NAME sgd_train
          COMMAND python train_sgd.py ../../data/a9a.txt a9a_sgd.model a9a_sgd.html a9a_sgd_code.txt)
 
 # copy contents of scripts directory to build/scripts
+foreach(SCRIPT_FILE ${SRC})
 add_custom_command(TARGET ${PROJ_NAME} POST_BUILD
-                   COMMAND ${CMAKE_COMMAND} -E copy_directory
-                   ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
+                   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} 
+                   COMMAND ${CMAKE_COMMAND}
+                   -E copy ${SCRIPT_FILE} ${CMAKE_CURRENT_BINARY_DIR})
+endforeach()                   
