changed SupervisedExample to be templated on DataVector type

--- a/libraries/dataset/CMakeLists.txt
+++ b/libraries/dataset/CMakeLists.txt
@@ -19,7 +19,6 @@ set (SRC src/DenseDataVector.cpp
          src/SparseBinaryDataVector.cpp
          src/SparseDataVector.cpp
          src/SparseEntryParser.cpp
-         src/SupervisedExample.cpp
          src/ZeroDataVector.cpp)
 
 set (INCLUDE include/DataVectorBuilder.h
@@ -45,6 +44,7 @@ set (TCC tcc/DataVectorBuilder.tcc
          tcc/RowDataset.tcc
          tcc/SparseBinaryDataVector.tcc
          tcc/SparseDataVector.tcc
+         tcc/SupervisedExample.tcc
          tcc/SupervisedExampleBuilder.tcc)
 
 source_group("src" FILES ${SRC})
