--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,6 @@ add_subdirectory(libraries/dataset)
 add_subdirectory(libraries/layers)
 add_subdirectory(libraries/linear)
 add_subdirectory(libraries/lossFunctions)
-add_subdirectory(libraries/optimization)
 add_subdirectory(libraries/predictors)
 add_subdirectory(libraries/testing)
 add_subdirectory(libraries/trainers)
@@ -50,7 +49,7 @@ if(${SWIG_ENABLED} STREQUAL "ON")
     add_subdirectory(examples)
   
     # Make interface code be dependent on all libraries
-    add_dependencies(EMLL_common common dataset layers linear lossFunctions optimization predictors testing treeLayout utilities)
+    add_dependencies(EMLL_common common dataset layers linear lossFunctions trainers predictors testing treeLayout utilities)
   else()
     message(WARNING "Couldn't find SWIG, skipping interface generation.")
   endif()
